Fix column gap in checksum table, homepage

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -194,7 +194,7 @@ section.index .block.download .secondary-container .changes li {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
-        grid-column-gap: 0;
+        grid-column-gap: 0.5rem;
         grid-row-gap: 0.5rem;
     }
 }
